--- a/styles.css
+++ b/styles.css
@@ -37,13 +37,13 @@ canvas {
     background-color: rgba(255, 255, 255, 0.7);
 }
 
-#fpsIndicator {
+#info-container {
     position: fixed;
     bottom: 10px;
     left: 10px;
     color: rgba(255,255,255,0.3);
-    font-size: 14px;
-    pointer-events: none;
+    font-size: 13px;
+    /* pointer-events: none; */
 }
 
 #gui {
@@ -339,6 +339,7 @@ h2 {
   margin: 0 auto;
   /* width: 100%; */
   text-align: center;
+  z-index: 100;
 }
 
 .displayCanvas {
