--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,31 @@ canvas {
 
 #info-container {
     position: fixed;
-    bottom: 10px;
-    left: 10px;
-    color: rgba(255,255,255,0.3);
-    font-size: 13px;
-    /* pointer-events: none; */
+    bottom: 3px;
+    left: 3px;
+    color: rgba(255,255,255,0.3) !important;
+    font-size: 12px;
+    text-decoration: none !important;
+    line-height: 0.6em;
+    background-color: rgba(0,0,0,0.2);
+    padding: 4px;
+}
+
+#floating-ig-link{
+  color: rgba(255,255,255,0.4) !important;
+}
+
+#zen-mode-button {
+  position: fixed;
+  top: 3px;
+  left: 3px;
+  color: rgba(255,255,255,0.5);
+  border: none;
+  /* background-color: none; */
+  background: none;
+  font-size: 12px;
+  pointer-events: cursor;
+  z-index: 100;
 }
 
 #gui {
@@ -331,11 +351,11 @@ h2 {
   font-family: Helvetica;
 }
 
-#buttonTable {
+#button-table {
   /* display: inline block; */
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  bottom: 3px;
+  right: 3px;
   margin: 0 auto;
   /* width: 100%; */
   text-align: center;
